# robin-prosthesis-control

./: .gitignore  CMakeLists.txt  README.md
dependencies/ottobock/michelangelo/: OBComDevice.xml
examples/: CMakeLists.txt
examples/affordancenet-cloud-masking/: CMakeLists.txt  affordancenet-cloud-masking.cpp
examples/affordancenet-semiauto-control/: CMakeLists.txt  affordancenet-semiauto-control.cpp
examples/lasers-cylinder/: CMakeLists.txt  lasers-cylinder.cpp
examples/lasers-semiauto-control/: CMakeLists.txt  lasers-semiauto-control.cpp
examples/lasers-single/: CMakeLists.txt  lasers-single.cpp
examples/lccp-multiprimitive/: CMakeLists.txt  lccp-multiprimitive.cpp
examples/lccp-semiauto-control/: CMakeLists.txt  lccp-semiauto-control.cpp
examples/multiple-sensors/: lasers-cylinder.cpp
examples/prosthesis-manual/: CMakeLists.txt  prosthesis-manual.cpp
examples/rgb-operation/: CMakeLists.txt  rgb-operation.cpp
examples/solver3-sac-cuboid/: CMakeLists.txt  solver3-sac-cuboid.cpp
examples/solver3-sac-cylinder/: CMakeLists.txt  solver3-sac-cylinder.cpp
examples/solver3-sac-sphere/: CMakeLists.txt  solver3-sac-sphere.cpp
pcl/: CMakeLists.txt  main.cpp
pcl/pcl-cylseg/: CMakeLists.txt  main.cpp
pcl/pcl-icp/: CMakeLists.txt  main.cpp
shapes/: cone.ply  cube.ply  cylinder.ply  monkey.ply  sphere.ply  torus.ply
src/: CMakeLists.txt  camera_depth.cpp  camera_depth.h  computer_vision.cpp  computer_vision.h  control.h  control_pid.cpp  control_simple.cpp  control_simple.h  data_manager.h  hand.cpp  hand.h  hand.hpp  hand_direct.cpp  hand_direct.h  hand_michelangelo.cpp  hand_michelangelo.h  hand_udp.cpp  hand_udp.h  laser.cpp  laser.h  laser_array.cpp  laser_array.h  laser_scanner.cpp  laser_scanner.h  main.cpp  primitive1.cpp  primitive1.h  primitive3.cpp  primitive3.h  primitive3_circle.cpp  primitive3_circle.h  primitive3_cube.cpp  primitive3_cube.h  primitive3_cuboid.cpp  primitive3_cuboid.h  primitive3_cylinder.cpp  primitive3_cylinder.h  primitive3_ellipse.cpp  primitive3_ellipse.h  (+32 more)
src/robin/: CMakeLists.txt
src/robin/control/: CMakeLists.txt  control.cpp  control.h  control_continuous.cpp  control_continuous.h  control_pid.cpp  control_pid.h  control_sequential.cpp  control_sequential.h  control_simple.cpp  control_simple.h
src/robin/feedback/: CMakeLists.txt  feedback.cpp  feedback.h  feedback_aim.cpp  feedback_aim.h  feedback_grasp.cpp  feedback_grasp.h
src/robin/primitive/: CMakeLists.txt  primitive.cpp  primitive.h  primitive1.cpp  primitive2.cpp  primitive2.h  primitive3.cpp  primitive3.h  primitive3_circle.cpp  primitive3_circle.h  primitive3_cuboid.cpp  primitive3_cuboid.h  primitive3_cylinder.cpp  primitive3_cylinder.h  primitive3_ellipse.cpp  primitive3_line.cpp  primitive3_line.h  primitive3_plane.cpp  primitive3_plane.h  primitive3_sphere.cpp  primitive3_sphere.h
src/robin/sensor/: CMakeLists.txt  camera_depth.cpp  camera_rgb.cpp  camera_rgb.h  engacoustics_tactor.cpp  engacoustics_tactor.h  hand.cpp  hand.h  hand_direct.cpp  hand_michelangelo.cpp  hand_michelangelo.h  hand_udp.cpp  hand_udp.h  laser_array.cpp  laser_scanner.cpp  mask_rgbd.cpp  mask_rgbd.h  realsense_d400.cpp  realsense_d400.h  royale_picoflexx.cpp  sensor.cpp  sensor.h  sensor1.cpp  sensor1.h  sensor2.cpp  sensor2.h  sensor3.cpp  sensor3.h  sensor4.cpp  sensor_array.cpp  tactor.cpp  tactor.h  webcam.cpp  webcam.h
src/robin/solver/: CMakeLists.txt  solver.cpp  solver.h  solver1.cpp  solver1.h  solver1_emg.cpp  solver1_emg.h  solver3.cpp  solver3.h  solver3_affnet.cpp  solver3_affnet.h  solver3_lasers.cpp  solver3_lasers.h  solver3_lccp.cpp  solver3_lccp.h
src/robin/utils/: CMakeLists.txt  data_manager.cpp
test/: CMakeLists.txt  CMakeLists.txt.in
