
add_subdirectory(prosthesis-manual)

add_subdirectory(solver3-sac-sphere)
add_subdirectory(solver3-sac-cylinder)
add_subdirectory(solver3-sac-cuboid)

add_subdirectory(lccp-multiprimitive)
add_subdirectory(lccp-semiauto-control)

add_subdirectory(lasers-single)
add_subdirectory(lasers-cylinder)
add_subdirectory(lasers-semiauto-control)

add_subdirectory(affordancenet-cloud-masking)
add_subdirectory(affordancenet-semiauto-control)